# multi-agent-health-insight-system

./: .gitignore  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  HEALTH_ANALYST_TEST_WORKFLOW.md  README.md  claude_desktop_config.json
.claude/: settings.local.json
agents/analyst-agent/config/: agent-description.md  agent-instructions.md
agents/extractor-agent/config/: agent-description.md  agent-instructions.md
agents/extractor-agent/knowledge/: clinical-data-extraction-schema.json  lab-results-extraction-schema.json  medications-extraction-schema.json  vitals-extraction-schema.json
data-store/snowflake/ddl/: health_intelligence_ddl.sql
docs/images/arch-images/visual-components/: agent-building-stack-visual-part1-building-the-solution.tsx  agent-tooling-stack-v2.tsx  health-intelligence-single-slide.tsx  infrastructure-foundation-visual-part2-intro.tsx  multi-agent-architecture-latest2.tsx  part1-intro-visual-updated-v3.tsx  part2-intro-visual-v2.tsx  part2-intro-visual.tsx
requirements/technical/: cortex-analyst-semantic-model-requirements.txt  data-modeling-principles.md  mcp-tool-requirements.md
semantic-model/snowflake/: health_intelligence_semantic_model.yaml
tools/health-mcp/: pyproject.toml  test_import.py  test_query.py
tools/health-mcp/src/: health_mcp.py
